# weatherbot-c-backend

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: Actions_Linux.yml
include/: weatherbot.h  weatherbot_rust_wrapper.h
src/: weatherbot.c  weatherbot_cache.c  weatherbot_city_parser.c  weatherbot_telebot.c
test/: CMakeLists.txt  stubs.c  weatherbot_tests.c
